--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "ngx-masonry": "^14.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
